syntax = "proto3";

package coteacher.v1;

import "coteacher/v1/resources.proto";

message CreateClassRequest {
  string name = 1;
  string teacher_id = 2;
}

message CreateClassResponse {
  Class class = 1;
}


message GetClassByIDRequest {
  string id = 1;
}

message GetClassByIDResponse {
  Class class = 1;
}

message GetClassByTeacherIDRequest {
  string teacher_id = 1;
}

message GetClassByTeacherIDResponse {
  repeated Class classes = 1;
}

message UpdateClassRequest {
  string id = 1;
  string name = 2;
  string teacher_id = 3;
}

message UpdateClassResponse {
  Class class = 1;
}

message DeleteClassRequest {
  string id = 1;
}

message DeleteClassResponse {
  Class class = 1;
}


service ClassService {
  rpc GetClassByID(GetClassByIDRequest) returns (GetClassByIDResponse);
  rpc GetClassByTeacherID(GetClassByTeacherIDRequest) returns (GetClassByTeacherIDResponse);
  rpc CreateClass(CreateClassRequest) returns (CreateClassResponse);
}